# rs_lambdas

./: Cargo.toml  README.md
src/: main.rs  s3.rs
