[package]
name = "rs_lambdas"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
aws-config = "1.5.8"
aws-sdk-s3 = "1.54.0"
aws-smithy-http = "0.60.11"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["apigw"] }
base64 = "0.22.1"
http = "1.1.0"
lambda_http = "0.13.0"
serde_json = "1.0.128"
tokio = "1.40.0"
